<resources>
    <string name="app_name">Terrania</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_home">Home</string>
    <string name="nav_learn">Learn</string>
    <string name="nav_play">Play</string>
    <string name="nav_about">About</string>
    <string name="msg_welcome">Welcome</string>
    <string name="msg_logout_prompt">Tap here to sign out</string>

    <string name="header_team">Meet the Team</string>
    <string name="body_team">Computer Science majors from <a href="http://uet.vnu.edu.vn">University of Engineering and Technology</a>, Vietnam National University, Hanoi:
    \n• Phạm Nguyễn Hoàng\n• Nguyễn Văn Tiến\n• Đỗ Quang Thành\n• Nguyễn Văn Thắng</string>
    <string name="header_acknowledgements">Acknowledgements</string>
    <string name="body_acknowledgements">• World countries information is provided by <a href="https://www.worlddata.info">WorldData.info</a> and <a href="https://github.com/mledoze/countries">mledoze/countries on GitHub</a>.\n• World flags are taken from <a href="http://flagpedia.net/">Flagpedia</a>.\n• The flags of Palestine, Myanmar, Peru, Bolivia and South Sudan are sourced from <a href="https://commons.wikimedia.org">Wikimedia Commons</a>.\n• Sounds are made by Bertrof and LittleRobotSoundFactory at <a href="http://freesound.org">Freesound</a></string>

    <string name="radio_africa">Africa</string>
    <string name="label_choose_continent">Continent</string>
    <string name="radio_america">America</string>
    <string name="radio_asia">Asia</string>
    <string name="radio_europe">Europe</string>
    <string name="radio_oceania">Oceania</string>
    <string name="radio_world">World</string>
    <string name="c2f">Country to flag</string>
    <string name="f2c">Flag to country</string>
    <string name="ct2cp">Country to capital</string>
    <string name="cp2ct">Capital to country</string>
    <string name="label_choose_number">Countries</string>
    <string name="number_10" translatable="false">10</string>
    <string name="number_20" translatable="false">20</string>
    <string name="number_30" translatable="false">30</string>
    <string name="number_all">All</string>
    <string name="btn_go">Go!</string>
    <string name="msg_oceania_countries">Oceania only has 14 countries. Therefore, choosing 20 or 30 countries is equivalent to \"All\".</string>
    <string name="ok" translatable="false">OK</string>
    <string name="msg_welcome_terrania">Welcome to Terrania!</string>
    <string name="msg_welcome_details">Terrania is an engaging quiz app about countries around the world. Test your knowledge with quizzes about country names, flags, population and country area.</string>
    <string name="btn_play_now">Play now</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="msg_not_signed_in">You are not signed in!</string>
    <string name="msg_sign_in_details">Sign in to get the most out of the game, including achievements and leaderboards.</string>
    <string name="msg_sign_in_error">There was an issue with sign-in. Please try again later.</string>
    <string name="msg_profile_prompt">Tap to sign out</string>
    <string name="msg_signed_in">Hello, %s</string>
    <string name="btn_sign_out">Sign out</string>
    <string name="btn_achievements">View achievements</string>
    <string name="btn_leaderboards">Go to leaderboards</string>
    <string name="title_activity_play">Play</string>
    <string name="desc_c2f">For each question, you are given a country. Find the flag for that country.</string>
    <string name="desc_f2c">For each question, you are given a flag. Choose the country that has the flag.</string>
    <string name="desc_ct2cp">For each question, you are given a country and four cities. Find the correct capital.</string>
    <string name="desc_cp2ct">For each question, you are given a capital city. Which country does it belong to?</string>
    <string name="next">Next</string>
    <string name="question_country_to_flag">Which is the flag of %s?</string>
    <string name="question_flag_to_country">This is the flag of…</string>
    <string name="question_country_to_capital">Which is the capital of %s?</string>
    <string name="question_capital_to_country">%s is the capital of…</string>
    <string name="title_activity_learn">Learn</string>
    <string name="hint_search">Country name</string>
    <string name="search">Search</string>
    <string name="title_activity_country">Country</string>
    <string name="action_settings">Settings</string>
    <string name="no_maps_or_browser">Please install a map or browser app on your device in order to see the map.</string>
    <string name="info_capital">Capital: %s</string>
    <string name="info_area">Area: %d km²</string>
    <string name="info_population">Population: %d</string>
    <string name="info_coastline">Coastline: %d km</string>
    <string name="info_currency">Currency: %s</string>
    <string name="info_dialling_prefix">Dialling prefix: %d</string>
    <string name="info_birth_rate">Birth rate: %.1f per mille</string>
    <string name="info_death_rate">Death rate: %.1f per mille</string>
    <string name="info_life_expectancy">Life expectancy: %.1f years</string>
    <string name="c2f_value" translatable="false">country2flag</string>
    <string name="f2c_value" translatable="false">flag2country</string>
    <string name="ct2cp_value" translatable="false">country2capital</string>
    <string name="cp2ct_value" translatable="false">capital2country</string>
    <string name="msg_network_error">An error has occurred. Please try again.</string>
    <string name="mixed">Mixed</string>
    <string name="mixed_value" translatable="false">mixed</string>
    <string name="desc_mixed">Enjoy a mix of four question types!</string>
    <string name="msg_game_over">Game over</string>
    <string name="msg_your_score">Your score is</string>
    <string name="msg_quit_game_prompt">Quit this game?</string>
    <string name="msg_quit_game_detail">If you quit this game, your score will be lost.</string>
    <string name="cancel">Cancel</string>
    <string name="msg_settings">Game settings</string>
    <string name="preference_sound">Sound effects</string>
    <string name="preference_offline">Offline mode</string>
    <string name="msg_offline">Go online to save your high score and achievements!</string>

</resources>
