<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_choose_continent"
            android:textColor="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:paddingBottom="8dp"/>
        <RadioGroup
            android:id="@+id/radio_group_continent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radio_asia">
            <RadioButton
                android:id="@+id/radio_africa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_africa"/>
            <RadioButton
                android:id="@+id/radio_america"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_america"/>
            <RadioButton
                android:id="@+id/radio_asia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_asia"/>
            <RadioButton
                android:id="@+id/radio_europe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_europe"/>
            <RadioButton
                android:id="@+id/radio_oceania"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_oceania"/>
            <RadioButton
                android:id="@+id/radio_world"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_world"/>
        </RadioGroup>
        <TextView
            android:id="@+id/label_game_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_choose_game_mode"
            android:textColor="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:drawableEnd="@drawable/ic_help_outline_black_24dp"
            android:drawableRight="@drawable/ic_help_outline_black_24dp"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"/>
        <Spinner
            android:id="@+id/spinner_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_choose_number"
            android:textColor="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"/>
        <RadioGroup
            android:id="@+id/radio_group_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@+id/radio_10">
            <RadioButton
                android:id="@+id/radio_10"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_10"/>
            <RadioButton
                android:id="@+id/radio_20"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_20"/>
            <RadioButton
                android:id="@+id/radio_30"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_30"/>
            <RadioButton
                android:id="@+id/radio_all"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_all"/>
        </RadioGroup>
        <Button
            android:id="@+id/btn_go"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/btn_go"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
    </LinearLayout>
</ScrollView>
