<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.volangvang.terrania.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_team"
        android:fontFamily="sans-serif-light"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
    <TextView
        android:id="@+id/body_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/body_team"
        android:textColorLink="@color/colorAccent"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:paddingBottom="8dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_acknowledgements"
        android:fontFamily="sans-serif-light"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
    <TextView
        android:id="@+id/body_acknowledgements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/body_acknowledgements"
        android:textColorLink="@color/colorAccent"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:paddingBottom="8dp"/>
    </LinearLayout>
</ScrollView>
