<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:background="@android:color/transparent"
    tools:background="@color/colorPrimary"
    android:orientation="vertical"
    android:gravity="center"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <ImageView
        android:id="@+id/game_mode_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="300dp"
        android:maxHeight="300dp" />
    <TextView
        android:id="@+id/game_mode_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lines="2"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        tools:text="@string/c2f"/>
    <TextView
        android:id="@+id/game_mode_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lines="2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="@string/desc_c2f"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_choose_continent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinner_continent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_choose_number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinner_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <Button
                android:id="@+id/btn_go"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_go"
                style="@style/Widget.AppCompat.Button.Colored"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>

